[Finished #79376308] - Fix Offer Detail Modal on Mobile
Fixed modal windows on site for a width < 767pxi (was snapping up to the top right of window), and added close button to offer detail modal.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
@@ -1288,9 +1288,8 @@ offerSteps ul {
     color: #3A3A3A;
     font-size: 35px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     width: 100%;
+    margin-top: 25px;
 }
 /* line 97, ../sass/_modals.scss */
 .offerDetails p {
@@ -1867,7 +1866,6 @@ label.label-unlimited {
 
 .offerDetails {
     padding: 39px;
-    width: 50%;
     display: inline-block;
 }
 
@@ -1889,7 +1887,7 @@ label.label-unlimited {
 }
 
 .offerHero, .offerDetails {
-    height: 400px;
+    height: 500px;
     position: relative;
     top: -35px;
     margin-bottom: -40px;
@@ -2356,6 +2354,23 @@ section.welcomeModal h1 {
     width: 100%;
 }
 
+.offerHero a.business-link {
+    width: 80%;
+}
+
+.offerHero button.close {
+    position: relative;
+    margin-left: 80%;
+    width: 20%;
+    height: 50px;
+    color: #fff;
+    opacity: 1;
+}
+
+.offerHero button.close span {
+    margin-left: 25px;
+}
+
 .offerItem.dummyTile {
     text-align: center;
     position: relative;
@@ -2561,8 +2576,29 @@ section.welcomeModal h1 {
 
 /* Responsive Magic */
 
+@media (max-width: 767px) {
+    
+    .offerDetails h1 {
+	margin-top: 25px;
+    }
+
+    #offer-modal .buyBtn {
+	width: 100%;
+    }
+
+    .offerHero {
+	height: 250px;
+    }
+
+}
+
 /* Small devices (Phones, Tablets, 400px, 768px and up) */
 @media (max-width: 400px) {
+    
+    .offerHero {
+	/* model style */
+	height: 200px;
+    }
 
     .offers-hero {
 	margin-left: -15px;
